packages/core/src/antlr/LambdaParser.ts
// @ts-nocheck
// Generated from ./src/antlr/Lambda.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LambdaListener from "./LambdaListener.js";
import LambdaVisitor from "./LambdaVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LambdaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly LAMBDA = 10;
	public static readonly LAMBDA_CAPITALIZED = 11;
	public static readonly LET = 12;
	public static readonly IN = 13;
	public static readonly FIX = 14;
	public static readonly TYPEDEF = 15;
	public static readonly NIL = 16;
	public static readonly CONS = 17;
	public static readonly ISNIL = 18;
	public static readonly HEAD = 19;
	public static readonly TAIL = 20;
	public static readonly LIST = 21;
	public static readonly FOLD = 22;
	public static readonly UNFOLD = 23;
	public static readonly MU = 24;
	public static readonly KIND_STAR = 25;
	public static readonly APOSTROPHE = 26;
	public static readonly FORALL = 27;
	public static readonly PI = 28;
	public static readonly CASE = 29;
	public static readonly OF = 30;
	public static readonly INL = 31;
	public static readonly INR = 32;
	public static readonly OR = 33;
	public static readonly AS = 34;
	public static readonly IF = 35;
	public static readonly THEN = 36;
	public static readonly ELSEIF = 37;
	public static readonly ELSE = 38;
	public static readonly UNDERSCORE = 39;
	public static readonly EQEQ = 40;
	public static readonly NEQ = 41;
	public static readonly LEQ = 42;
	public static readonly GEQ = 43;
	public static readonly EQ = 44;
	public static readonly LT = 45;
	public static readonly MT = 46;
	public static readonly MUL = 47;
	public static readonly PLUS = 48;
	public static readonly MINUS = 49;
	public static readonly DIV = 50;
	public static readonly LBRACK = 51;
	public static readonly RBRACK = 52;
	public static readonly LPAREN = 53;
	public static readonly RPAREN = 54;
	public static readonly COMMA = 55;
	public static readonly ARROW = 56;
	public static readonly DOUBLEARROW = 57;
	public static readonly COLON = 58;
	public static readonly DOT = 59;
	public static readonly SEMI = 60;
	public static readonly GREEK = 61;
	public static readonly NATURAL_NUMBER = 62;
	public static readonly ZERO = 63;
	public static readonly STRING_LITERAL = 64;
	public static readonly ID = 65;
	public static readonly LINE_COMMENT = 66;
	public static readonly WS = 67;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_expression = 0;
	public static readonly RULE_globalDecl = 1;
	public static readonly RULE_term = 2;
	public static readonly RULE_type = 3;
	public static readonly RULE_typeVariable = 4;
	public static readonly RULE_constant = 5;
	public static readonly RULE_kind = 6;
	public static readonly literalNames: (string | null)[] = [ null, "'Nat'", 
                                                            "'Bool'", "'Unit'", 
                                                            "'String'", 
                                                            "'true'", "'True'", 
                                                            "'false'", "'False'", 
                                                            "'unit'", null, 
                                                            "'\\u039B'", 
                                                            "'let'", "'in'", 
                                                            "'fix'", "'typedef'", 
                                                            "'nil'", "'cons'", 
                                                            "'isnil'", "'head'", 
                                                            "'tail'", "'List'", 
                                                            "'fold'", "'unfold'", 
                                                            "'\\u03BC'", 
                                                            "'@'", "'''", 
                                                            "'\\u2200'", 
                                                            "'\\u03A0'", 
                                                            "'case'", "'of'", 
                                                            "'inl'", "'inr'", 
                                                            "'||'", "'as'", 
                                                            "'if'", "'then'", 
                                                            "'elseif'", 
                                                            "'else'", "'_'", 
                                                            "'=='", "'!='", 
                                                            "'<='", "'>='", 
                                                            "'='", "'<'", 
                                                            "'>'", null, 
                                                            "'+'", "'-'", 
                                                            "'/'", "'['", 
                                                            "']'", "'('", 
                                                            "')'", "','", 
                                                            null, null, 
                                                            "':'", "'.'", 
                                                            "';'", null, 
                                                            null, "'0'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "LAMBDA", "LAMBDA_CAPITALIZED", 
                                                             "LET", "IN", 
                                                             "FIX", "TYPEDEF", 
                                                             "NIL", "CONS", 
                                                             "ISNIL", "HEAD", 
                                                             "TAIL", "LIST", 
                                                             "FOLD", "UNFOLD", 
                                                             "MU", "KIND_STAR", 
                                                             "APOSTROPHE", 
                                                             "FORALL", "PI", 
                                                             "CASE", "OF", 
                                                             "INL", "INR", 
                                                             "OR", "AS", 
                                                             "IF", "THEN", 
                                                             "ELSEIF", "ELSE", 
                                                             "UNDERSCORE", 
                                                             "EQEQ", "NEQ", 
                                                             "LEQ", "GEQ", 
                                                             "EQ", "LT", 
                                                             "MT", "MUL", 
                                                             "PLUS", "MINUS", 
                                                             "DIV", "LBRACK", 
                                                             "RBRACK", "LPAREN", 
                                                             "RPAREN", "COMMA", 
                                                             "ARROW", "DOUBLEARROW", 
                                                             "COLON", "DOT", 
                                                             "SEMI", "GREEK", 
                                                             "NATURAL_NUMBER", 
                                                             "ZERO", "STRING_LITERAL", 
                                                             "ID", "LINE_COMMENT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"expression", "globalDecl", "term", "type", "typeVariable", "constant", 
		"kind",
	];
	public get grammarFileName(): string { return "Lambda.g4"; }
	public get literalNames(): (string | null)[] { return LambdaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LambdaParser.symbolicNames; }
	public get ruleNames(): string[] { return LambdaParser.ruleNames; }
	public get serializedATN(): number[] { return LambdaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LambdaParser._ATN, LambdaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LambdaParser.RULE_expression);
		let _la: number;
		try {
			let _alt: number;
			localctx = new ExprContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 17;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 14;
					this.globalDecl();
					}
					}
				}
				this.state = 19;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 27;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 3)) & ~0x1F) === 0 && ((1 << (_la - 3)) & 874245117) !== 0) || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & 2013594625) !== 0)) {
				{
				this.state = 20;
				this.term(0);
				this.state = 23;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===58) {
					{
					this.state = 21;
					this.match(LambdaParser.COLON);
					this.state = 22;
					this.type_(0);
					}
				}

				this.state = 25;
				this.match(LambdaParser.SEMI);
				}
			}

			this.state = 29;
			this.match(LambdaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public globalDecl(): GlobalDeclContext {
		let localctx: GlobalDeclContext = new GlobalDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LambdaParser.RULE_globalDecl);
		try {
			this.state = 60;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				localctx = new GlobalVariableDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 31;
				this.match(LambdaParser.ID);
				this.state = 32;
				this.match(LambdaParser.COLON);
				this.state = 33;
				this.type_(0);
				this.state = 34;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 2:
				localctx = new GlobalFunctionDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 36;
				this.match(LambdaParser.ID);
				this.state = 37;
				this.match(LambdaParser.EQ);
				this.state = 38;
				this.term(0);
				this.state = 39;
				this.match(LambdaParser.COLON);
				this.state = 40;
				this.type_(0);
				this.state = 41;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 3:
				localctx = new UntypedGlobalFunctionDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 43;
				this.match(LambdaParser.ID);
				this.state = 44;
				this.match(LambdaParser.EQ);
				this.state = 45;
				this.term(0);
				this.state = 46;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 4:
				localctx = new TypeAliasDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 48;
				this.match(LambdaParser.TYPEDEF);
				this.state = 49;
				this.match(LambdaParser.ID);
				this.state = 50;
				this.match(LambdaParser.EQ);
				this.state = 51;
				this.type_(0);
				this.state = 52;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 5:
				localctx = new TypeConstructorDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 54;
				this.match(LambdaParser.TYPEDEF);
				this.state = 55;
				this.match(LambdaParser.ID);
				this.state = 56;
				this.match(LambdaParser.COLON);
				this.state = 57;
				this.kind(0);
				this.state = 58;
				this.match(LambdaParser.SEMI);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public term(): TermContext;
	public term(_p: number): TermContext;
	// @RuleVersion(0)
	public term(_p?: number): TermContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TermContext = new TermContext(this, this._ctx, _parentState);
		let _prevctx: TermContext = localctx;
		let _startState: number = 4;
		this.enterRecursionRule(localctx, 4, LambdaParser.RULE_term, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 250;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				localctx = new DummyAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 63;
				this.match(LambdaParser.LAMBDA);
				this.state = 64;
				this.match(LambdaParser.UNDERSCORE);
				this.state = 65;
				this.match(LambdaParser.COLON);
				this.state = 66;
				this.type_(0);
				this.state = 67;
				this.match(LambdaParser.DOT);
				this.state = 68;
				this.term(24);
				}
				break;
			case 2:
				{
				localctx = new LambdaAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 70;
				this.match(LambdaParser.LAMBDA);
				this.state = 71;
				this.match(LambdaParser.ID);
				this.state = 72;
				this.match(LambdaParser.COLON);
				this.state = 73;
				this.type_(0);
				this.state = 74;
				this.match(LambdaParser.DOT);
				this.state = 75;
				this.term(23);
				}
				break;
			case 3:
				{
				localctx = new LambdaAbstractionUntypedContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 77;
				this.match(LambdaParser.LAMBDA);
				this.state = 78;
				this.match(LambdaParser.ID);
				this.state = 79;
				this.match(LambdaParser.DOT);
				this.state = 80;
				this.term(22);
				}
				break;
			case 4:
				{
				localctx = new TypeAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 81;
				this.match(LambdaParser.LAMBDA_CAPITALIZED);
				this.state = 82;
				this.typeVariable();
				this.state = 83;
				this.match(LambdaParser.DOT);
				this.state = 84;
				this.term(21);
				}
				break;
			case 5:
				{
				localctx = new LetExpressionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 86;
				this.match(LambdaParser.LET);
				this.state = 87;
				this.match(LambdaParser.ID);
				this.state = 88;
				this.match(LambdaParser.EQ);
				this.state = 89;
				this.term(0);
				this.state = 90;
				this.match(LambdaParser.IN);
				this.state = 91;
				this.term(20);
				}
				break;
			case 6:
				{
				localctx = new IfConditionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 93;
				this.match(LambdaParser.IF);
				this.state = 94;
				this.term(0);
				this.state = 95;
				this.match(LambdaParser.THEN);
				this.state = 96;
				this.term(0);
				this.state = 104;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 97;
						this.match(LambdaParser.ELSEIF);
						this.state = 98;
						this.term(0);
						this.state = 99;
						this.match(LambdaParser.THEN);
						this.state = 100;
						this.term(0);
						}
						}
					}
					this.state = 106;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
				}
				this.state = 109;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
				case 1:
					{
					this.state = 107;
					this.match(LambdaParser.ELSE);
					this.state = 108;
					this.term(0);
					}
					break;
				}
				}
				break;
			case 7:
				{
				localctx = new CaseContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 111;
				this.match(LambdaParser.CASE);
				this.state = 112;
				this.term(0);
				this.state = 113;
				this.match(LambdaParser.OR);
				this.state = 114;
				this.match(LambdaParser.INL);
				this.state = 115;
				this.match(LambdaParser.ID);
				this.state = 116;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 117;
				this.term(0);
				this.state = 118;
				this.match(LambdaParser.OR);
				this.state = 119;
				this.match(LambdaParser.INR);
				this.state = 120;
				this.match(LambdaParser.ID);
				this.state = 121;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 122;
				this.term(18);
				}
				break;
			case 8:
				{
				localctx = new VariantCaseContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 124;
				this.match(LambdaParser.CASE);
				this.state = 125;
				this.term(0);
				this.state = 126;
				this.match(LambdaParser.OF);
				this.state = 127;
				this.match(LambdaParser.LBRACK);
				this.state = 128;
				this.match(LambdaParser.ID);
				this.state = 129;
				this.match(LambdaParser.EQ);
				this.state = 130;
				this.match(LambdaParser.ID);
				this.state = 131;
				this.match(LambdaParser.RBRACK);
				this.state = 132;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 133;
				this.term(0);
				this.state = 144;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 134;
						this.match(LambdaParser.OR);
						this.state = 135;
						this.match(LambdaParser.LBRACK);
						this.state = 136;
						this.match(LambdaParser.ID);
						this.state = 137;
						this.match(LambdaParser.EQ);
						this.state = 138;
						this.match(LambdaParser.ID);
						this.state = 139;
						this.match(LambdaParser.RBRACK);
						this.state = 140;
						this.match(LambdaParser.DOUBLEARROW);
						this.state = 141;
						this.term(0);
						}
						}
					}
					this.state = 146;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				}
				}
				break;
			case 9:
				{
				localctx = new InlContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 147;
				this.match(LambdaParser.INL);
				this.state = 148;
				this.term(0);
				this.state = 149;
				this.match(LambdaParser.AS);
				this.state = 150;
				this.type_(0);
				}
				break;
			case 10:
				{
				localctx = new InrContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 152;
				this.match(LambdaParser.INR);
				this.state = 153;
				this.term(0);
				this.state = 154;
				this.match(LambdaParser.AS);
				this.state = 155;
				this.type_(0);
				}
				break;
			case 11:
				{
				localctx = new FixContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 157;
				this.match(LambdaParser.FIX);
				this.state = 158;
				this.term(14);
				}
				break;
			case 12:
				{
				localctx = new NilContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 159;
				this.match(LambdaParser.NIL);
				this.state = 160;
				this.match(LambdaParser.LBRACK);
				this.state = 161;
				this.type_(0);
				this.state = 162;
				this.match(LambdaParser.RBRACK);
				}
				break;
			case 13:
				{
				localctx = new ConsContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 164;
				this.match(LambdaParser.CONS);
				this.state = 165;
				this.match(LambdaParser.LBRACK);
				this.state = 166;
				this.type_(0);
				this.state = 167;
				this.match(LambdaParser.RBRACK);
				this.state = 168;
				this.term(0);
				this.state = 169;
				this.term(12);
				}
				break;
			case 14:
				{
				localctx = new IsNilContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 171;
				this.match(LambdaParser.ISNIL);
				this.state = 172;
				this.match(LambdaParser.LBRACK);
				this.state = 173;
				this.type_(0);
				this.state = 174;
				this.match(LambdaParser.RBRACK);
				this.state = 175;
				this.term(11);
				}
				break;
			case 15:
				{
				localctx = new HeadContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 177;
				this.match(LambdaParser.HEAD);
				this.state = 178;
				this.match(LambdaParser.LBRACK);
				this.state = 179;
				this.type_(0);
				this.state = 180;
				this.match(LambdaParser.RBRACK);
				this.state = 181;
				this.term(10);
				}
				break;
			case 16:
				{
				localctx = new TailContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 183;
				this.match(LambdaParser.TAIL);
				this.state = 184;
				this.match(LambdaParser.LBRACK);
				this.state = 185;
				this.type_(0);
				this.state = 186;
				this.match(LambdaParser.RBRACK);
				this.state = 187;
				this.term(9);
				}
				break;
			case 17:
				{
				localctx = new FoldContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 189;
				this.match(LambdaParser.FOLD);
				this.state = 190;
				this.match(LambdaParser.LBRACK);
				this.state = 191;
				this.type_(0);
				this.state = 192;
				this.match(LambdaParser.RBRACK);
				this.state = 193;
				this.term(8);
				}
				break;
			case 18:
				{
				localctx = new UnfoldContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 195;
				this.match(LambdaParser.UNFOLD);
				this.state = 196;
				this.match(LambdaParser.LBRACK);
				this.state = 197;
				this.type_(0);
				this.state = 198;
				this.match(LambdaParser.RBRACK);
				this.state = 199;
				this.term(7);
				}
				break;
			case 19:
				{
				localctx = new RecordContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 201;
				this.match(LambdaParser.LT);
				this.state = 202;
				this.match(LambdaParser.ID);
				this.state = 203;
				this.match(LambdaParser.EQ);
				this.state = 204;
				this.term(0);
				this.state = 211;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===55) {
					{
					{
					this.state = 205;
					this.match(LambdaParser.COMMA);
					this.state = 206;
					this.match(LambdaParser.ID);
					this.state = 207;
					this.match(LambdaParser.EQ);
					this.state = 208;
					this.term(0);
					}
					}
					this.state = 213;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 214;
				this.match(LambdaParser.MT);
				}
				break;
			case 20:
				{
				localctx = new TupleContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 216;
				this.match(LambdaParser.LT);
				this.state = 217;
				this.term(0);
				this.state = 222;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===55) {
					{
					{
					this.state = 218;
					this.match(LambdaParser.COMMA);
					this.state = 219;
					this.term(0);
					}
					}
					this.state = 224;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 225;
				this.match(LambdaParser.MT);
				}
				break;
			case 21:
				{
				localctx = new VariantContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 227;
				this.match(LambdaParser.LBRACK);
				this.state = 228;
				this.match(LambdaParser.ID);
				this.state = 229;
				this.match(LambdaParser.EQ);
				this.state = 230;
				this.term(0);
				this.state = 237;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===55) {
					{
					{
					this.state = 231;
					this.match(LambdaParser.COMMA);
					this.state = 232;
					this.match(LambdaParser.ID);
					this.state = 233;
					this.match(LambdaParser.EQ);
					this.state = 234;
					this.term(0);
					}
					}
					this.state = 239;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 240;
				this.match(LambdaParser.RBRACK);
				this.state = 241;
				this.match(LambdaParser.AS);
				this.state = 242;
				this.type_(0);
				}
				break;
			case 22:
				{
				localctx = new VariableContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 244;
				this.match(LambdaParser.ID);
				}
				break;
			case 23:
				{
				localctx = new ParenthesesContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 245;
				this.match(LambdaParser.LPAREN);
				this.state = 246;
				this.term(0);
				this.state = 247;
				this.match(LambdaParser.RPAREN);
				}
				break;
			case 24:
				{
				localctx = new LiteralContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 249;
				this.constant();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 276;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 274;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
					case 1:
						{
						localctx = new ApplicationContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 252;
						if (!(this.precpred(this._ctx, 29))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 29)");
						}
						this.state = 253;
						this.term(30);
						}
						break;
					case 2:
						{
						localctx = new BinaryOpContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
